--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </style>
   <script>
     function trackClick(label) {
-      fetch(`https://api.countapi.xyz/hit/hrum-kava/${label}`);
+      fetch(`https://api.counterapi.dev/v1/xpymcafe/${label}/up`);
     }
   </script>
 </head>
