--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
   <h1>Кава. Десерт. Спокій.</h1>
   <p>Це текст для короткого опису акцій і т.п.</p>
   <div class="social-icon">
-    <a href="#" onclick="trackClick('instagram')">
+    <a href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('instagram')">
       <img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"/>
     </a>
   </div>
-  <a class="link-button" href="#" onclick="trackClick('menu')">Наше меню</a>
-  <a class="link-button" href="#" onclick="trackClick('link1')">Посилання 1</a>
-  <a class="link-button" href="#" onclick="trackClick('link2')">Посилання 2</a>
+  <a class="link-button" href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('menu')">Наше меню</a>
+  <a class="link-button" href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('link1')">Посилання 1</a>
+  <a class="link-button" href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('link2')">Посилання 2</a>
   <div class="footer">Linktree-подібна сторінка для кав'ярні</div>
 </body>
 </html>
