--- a/index.html
+++ b/index.html
@@ -1,88 +1,146 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Кав'ярня ХРУМ</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Кав'ярня Хрум</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #5c4a3d;
-      color: #fcd9b8;
+      background-color: #4e4539;
+      font-family: sans-serif;
+      color: #f9e7d2;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
+      padding: 2rem;
     }
+
     .logo {
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      background-color: #d8b083;
-      margin-bottom: 20px;
+      overflow: hidden;
+      margin: 0 auto 1rem auto;
+      border: 2px solid #e5c79a;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 24px;
-      font-weight: bold;
     }
+
+    .logo img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
     h1 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
+      font-size: 1.5rem;
+      margin: 0.5rem 0;
     }
-    p {
-      font-size: 14px;
-      margin-top: 4px;
-      margin-bottom: 20px;
+
+    .carousel {
+      margin: 1rem auto;
+      width: 90%;
+      max-width: 400px;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      position: relative;
     }
-    .social-icon {
-      font-size: 24px;
-      margin-bottom: 20px;
+
+    .carousel img {
+      width: 100%;
+      display: none;
+      border-radius: 12px;
+      position: absolute;
+      top: 0; left: 0;
     }
-    .link-button {
-      background-color: #fcd9b8;
-      color: #5c4a3d;
-      border: none;
-      border-radius: 10px;
-      padding: 15px;
-      margin: 8px 0;
-      font-size: 16px;
+
+    .carousel img.active {
+      display: block;
+      position: relative;
+    }
+
+    .desc {
+      margin: 1.5rem 0 1rem 0;
+      color: #e5c79a;
+    }
+
+    .button {
+      background-color: #f0d9b5;
+      color: #4e4539;
+      padding: 1rem;
+      margin: 0.4rem auto;
       width: 80%;
       max-width: 400px;
+      border: none;
+      border-radius: 12px;
+      font-size: 1rem;
+      font-weight: bold;
       cursor: pointer;
-      text-decoration: none;
       display: block;
+      text-decoration: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: transform 0.1s;
     }
+
+    .button:hover {
+      transform: scale(1.02);
+    }
+
     .footer {
-      margin-top: 40px;
-      font-size: 12px;
-      color: #c0a890;
+      margin-top: 3rem;
+      color: #999;
+      font-size: 0.8rem;
     }
   </style>
-  <script>
-    function trackClick(label) {
-      fetch(`https://api.counterapi.dev/v1/xpymcafe/${label}/up`);
-    }
-  </script>
 </head>
 <body>
-  <div class="logo">Хрум</div>
-  <h1>Кава. Десерт. Спокій.</h1>
-  <p>Це текст для короткого опису акцій і т.п.</p>
-  <div class="social-icon">
-    <a href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('instagram')">
-      <img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"/>
-    </a>
+  <div class="logo">
+    <img src="img/logo.jpg" alt="Логотип" />
   </div>
-  <a class="link-button" href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('menu')">Наше меню</a>
-  <a class="link-button" href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('link1')">Посилання 1</a>
-  <a class="link-button" href="https://www.instagram.com/xpym_cafe/" onclick="trackClick('link2')">Посилання 2</a>
-  <div class="footer">Linktree-подібна сторінка для кав'ярні</div>
+  <h1>Кава. Десерт. Спокій.</h1>
+
+  <div class="carousel" id="carousel"></div>
+
+  <p class="desc">Це текст для короткого опису акцій і т.п.</p>
+
+  <a href="https://instagram.com" class="button" onclick="trackClick('instagram')">Instagram</a>
+  <a href="https://menu.example.com" class="button" onclick="trackClick('menu')">Наше меню</a>
+  <a href="https://maps.example.com" class="button" onclick="trackClick('map')">Як нас знайти</a>
+
+  <div class="footer">© Хрум</div>
+
+  <script>
+    function trackClick(key) {
+      fetch("https://api.countapi.xyz/hit/hrum-kava/" + key);
+    }
+
+    // Автоматична генерація каруселі
+    const carousel = document.getElementById('carousel');
+    let index = 1;
+    const images = [];
+
+    function preloadNextImage() {
+      const img = new Image();
+      img.src = `img/promo/${index}.jpg`;
+      img.onload = () => {
+        img.classList.add('carousel-img');
+        if (images.length === 0) img.classList.add('active');
+        carousel.appendChild(img);
+        images.push(img);
+        index++;
+        preloadNextImage();
+      };
+    }
+
+    preloadNextImage();
+
+    setInterval(() => {
+      if (images.length < 2) return;
+      const current = images.find(i => i.classList.contains('active'));
+      current.classList.remove('active');
+      const next = images[(images.indexOf(current) + 1) % images.length];
+      next.classList.add('active');
+    }, 4000);
+  </script>
 </body>
 </html>
