--- a/index.html
+++ b/index.html
@@ -5,21 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Кав'ярня Хрум</title>
   <style>
+    :root {
+      --accent: #e5c79a;
+      --bg: #4e4539;
+      --text: #f9e7d2;
+      --desc: #e5c79a;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
-      background-color: #4e4539;
+      background-color: var(--bg);
       font-family: sans-serif;
-      color: #f9e7d2;
+      color: var(--text);
       text-align: center;
-      padding: 2rem;
+      padding: 4vh 5vw;
     }
 
     .logo {
-      width: 120px;
-      height: 120px;
+      width: 30vw;
+      max-width: 120px;
+      height: 30vw;
+      max-height: 120px;
       border-radius: 50%;
       overflow: hidden;
-      margin: 0 auto 1rem auto;
-      border: 2px solid #e5c79a;
+      margin: 0 auto 4vh auto;
+      border: 2px solid var(--accent);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -32,48 +47,77 @@
     }
 
     h1 {
-      font-size: 1.5rem;
-      margin: 0.5rem 0;
+      font-size: 5vw;
+      margin-bottom: 2vh;
     }
 
-    .carousel {
-      margin: 1rem auto;
-      width: 90%;
-      max-width: 400px;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      position: relative;
-    }
-
-    .carousel img {
+    .slider {
       width: 100%;
-      display: none;
+      max-width: 450px;
+      margin: 2vh auto;
       border-radius: 12px;
-      position: absolute;
-      top: 0; left: 0;
+      overflow: hidden;
+      position: relative;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
 
-    .carousel img.active {
+    .slides {
+      height: 200px;
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    .slide {
+      flex: 0 0 100%;
+    }
+
+    .slide img {
+      width: 100%;
+      height: auto;
       display: block;
-      position: relative;
+    }
+
+    .navigation-manual {
+      position: absolute;
+      width: 100%;
+      bottom: 8px;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .manual-btn {
+      width: 12px;
+      height: 12px;
+      border: 2px solid var(--accent);
+      border-radius: 50%;
+      cursor: pointer;
+      background-color: transparent;
+      transition: background-color 0.3s;
+    }
+
+    .manual-btn:hover {
+      background-color: var(--accent);
     }
 
     .desc {
-      margin: 1.5rem 0 1rem 0;
-      color: #e5c79a;
+      margin: 4vh 0 2vh 0;
+      font-size: 1rem;
+      color: var(--desc);
     }
 
     .button {
       background-color: #f0d9b5;
-      color: #4e4539;
+      color: var(--bg);
       padding: 1rem;
-      margin: 0.4rem auto;
-      width: 80%;
-      max-width: 400px;
+      margin: 1vh auto;
+      width: 90%;
+      max-width: 450px;
       border: none;
       border-radius: 12px;
-      font-size: 1rem;
+      font-size: 1.1rem;
       font-weight: bold;
       cursor: pointer;
       display: block;
@@ -83,13 +127,27 @@
     }
 
     .button:hover {
-      transform: scale(1.02);
+      transform: scale(1.03);
     }
 
     .footer {
-      margin-top: 3rem;
-      color: #999;
-      font-size: 0.8rem;
+      margin-top: 5vh;
+      color: #aaa;
+      font-size: 0.75rem;
+    }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .desc {
+        font-size: 1.2rem;
+      }
+
+      .button {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
@@ -99,7 +157,18 @@
   </div>
   <h1>Кава. Десерт. Спокій.</h1>
 
-  <div class="carousel" id="carousel"></div>
+  <div class="slider">
+    <div class="slides" id="slides">
+      <div class="slide"><img src="img/promo/1.jpg" alt="Промо 1" /></div>
+      <div class="slide"><img src="img/promo/2.jpg" alt="Промо 2" /></div>
+      <div class="slide"><img src="img/promo/3.jpg" alt="Промо 3" /></div>
+    </div>
+    <div class="navigation-manual">
+      <span class="manual-btn" onclick="manualSlide(0)"></span>
+      <span class="manual-btn" onclick="manualSlide(1)"></span>
+      <span class="manual-btn" onclick="manualSlide(2)"></span>
+    </div>
+  </div>
 
   <p class="desc">Це текст для короткого опису акцій і т.п.</p>
 
@@ -114,33 +183,23 @@
       fetch("https://api.countapi.xyz/hit/hrum-kava/" + key);
     }
 
-    // Автоматична генерація каруселі
-    const carousel = document.getElementById('carousel');
-    let index = 1;
-    const images = [];
+    const slides = document.getElementById("slides");
+    let currentSlide = 0;
+    const totalSlides = slides.children.length;
 
-    function preloadNextImage() {
-      const img = new Image();
-      img.src = `img/promo/${index}.jpg`;
-      img.onload = () => {
-        img.classList.add('carousel-img');
-        if (images.length === 0) img.classList.add('active');
-        carousel.appendChild(img);
-        images.push(img);
-        index++;
-        preloadNextImage();
-      };
+    function manualSlide(index) {
+      currentSlide = index;
+      updateSlider();
     }
 
-    preloadNextImage();
+    function updateSlider() {
+      slides.style.transform = `translateX(-${currentSlide * 100}%)`;
+    }
 
     setInterval(() => {
-      if (images.length < 2) return;
-      const current = images.find(i => i.classList.contains('active'));
-      current.classList.remove('active');
-      const next = images[(images.indexOf(current) + 1) % images.length];
-      next.classList.add('active');
-    }, 4000);
+      currentSlide = (currentSlide + 1) % totalSlides;
+      updateSlider();
+    }, 7000);
   </script>
 </body>
 </html>
