--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
   <script>
     function trackClick(key) {
-      fetch("https://api.countapi.xyz/hit/hrum-kava/" + key);
+      fetch(`https://api.counterapi.dev/v1/xpym_cb/${key}/up`);
     }
 
     const slides = document.getElementById("slides");
