--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <img src="img/promo/1.jpg" alt="Промо 1" />
       </div>
       <div class="slide">
-        <div class="promo-desc">Донат не врятує світ, але настрій точно!</div>
+        <div class="promo-desc">Пончик не врятує світ, але настрій точно!</div>
         <img src="img/promo/2.jpg" alt="Промо 2" />
       </div>
       <div class="slide">
