--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-  <title>Кав'ярня Хрум</title>
+  <title>Хрум Coffee Bar</title>
   <style>
     :root {
       --accent: #e5c79a;
@@ -262,7 +262,7 @@
   <div class="slider">
     <div class="slides" id="slides">
       <div class="slide">
-        <div class="promo-desc">Літні напої вже чекають. Спробуй!</div>
+        <div class="promo-desc">Літні напої вже у меню Спробуй!</div>
         <img src="img/promo/1.jpg" alt="Промо 1" />
       </div>
       <div class="slide">
@@ -285,7 +285,7 @@
   <p class="desc">Usefull info</p>
 -->
 
-  <a href="https://drive.google.com/file/d/1j_IKSbINZjfdbXZDE1pXQor-gmuKLZNq/view?usp=sharing" class="button" onclick="trackClick('menu')">
+  <a href="https://drive.google.com/file/d/1RNkmCoabPE1QKB29yjk8LUhOkLY9G27T/view?usp=sharing" class="button" onclick="trackClick('menu')">
     <img src="img/icons/menu.svg" alt="" style="width: 20px; height: 20px; margin-left: 0px; vertical-align: middle;">
     Наше меню
   </a>
