--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   <div class="slider">
     <div class="slides" id="slides">
       <div class="slide">
-        <div class="promo-desc">Літні напої вже у меню Спробуй!</div>
+        <div class="promo-desc">Літні напої вже у меню<br>Спробуй!</div>
         <img src="img/promo/1.jpg" alt="Промо 1" />
       </div>
       <div class="slide">
