--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
     createDots();
     updateSlider();
-    trackClick('visits_total')
+    trackClick('visits_total');
   </script>
 </body>
 </html>
