Logo shining update

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
       max-width: 120px;
       height: 30vw;
       max-height: 120px;
-      border-radius: 50%;
+      border-radius: 50% !important;
       position: relative;
-      overflow: hidden;
+      overflow: clip;
       margin: 0 auto 1vh auto;
       border: 4px solid #ffc77a;
-      display: flex;
+      display: block;
       align-items: center;
       justify-content: center;
+      -webkit-mask-image: none;
     }
 
     .logo::before {
