Revert "Update index.html"
This reverts commit 769018de0255d1b52e04083f7c1cd21173c5d447.

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
     @keyframes shine {
       0% {
-        transform: translateX(-30vw) rotate(25deg);
+        transform: translateX(-100%) rotate(25deg);
       }
       100% {
-        transform: translateX(30vw) rotate(25deg);
+        transform: translateX(100%) rotate(25deg);
       }
     }
 
