--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       transform: rotate(25deg);
       animation: shine 3s linear 1 forwards;
       pointer-events: none;
+      z-index: 2;
     }
 
     @keyframes shine {
