--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
       max-width: 120px;
       height: 30vw;
       max-height: 120px;
-      border-radius: 50% !important;
+      border-radius: 50%;
       position: relative;
-      overflow: clip;
+      overflow: hidden;
       margin: 0 auto 1vh auto;
       border: 4px solid #ffc77a;
-      display: block;
+      display: flex;
       align-items: center;
       justify-content: center;
-      -webkit-mask-image: none;
     }
 
     .logo::before {
